# QuoteConverter

./: Parts Follow Up Template.xlsx  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: Parts Follow Up Template.xlsx  README.md
followup_quotes/: __init__.py  app.py  cli.py  config.py  io_excel.py  matching.py  ui.py
tests/: test_io_excel_template.py  test_matching.py
